fix: Java 8 support
Signed-off-by: Chirag Soni <chirag.soni@ibm.com>